# fresnodailynewsService

./: .gitignore  main.py  pyproject.toml  requirements.txt  setup.py
code/: FresnoDailyNewsGetVerbsStartWith_pb2.py  FresnoDailyNewsGetVerbsStartWith_pb2.pyi  FresnoDailyNewsGetVerbsStartWith_pb2_grpc.py  FresnoDailyNewsGetVerbs_pb2.py  FresnoDailyNewsGetVerbs_pb2_grpc.py  FresnoDailyNews_pb2.pyi  FresnoDailyNews_pb2_grpc.py  fresnodailynewsgrpcserver.py  pythonrpcmethods.py
proto/: FresnoDailyNews.proto  FresnoDailyNewsGetVerbs.proto  FresnoDailyNewsGetVerbsStartWith.proto
services/: FresnoDailyNewsGetVerbsStartWith_pb2_grpc.py  FresnoDailyNewsGetVerbs_pb2.pyi  FresnoDailyNewsGetVerbs_pb2_grpc.py  FresnoDailyNews_pb2.py  FresnoDailyNews_pb2_grpc.py
